workshop03/bggapp.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: bggapp-deploy
  labels:
    name: bggapp-deploy
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
      # maxSurge: 25%
      # maxUnavailable: 25%
  selector:
    matchLabels:
      name: bggapp-po
  template:
    metadata:
      name: bggapp-po
      labels:
        name: bggapp-po
        dept: eng
    spec:
      containers:
      - name: bggapp-container  
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  labels:
    name: bggapp-svc
spec:
  type: LoadBalancer
  selector:
    name: bggapp-po
  ports:
  - port: 80
    targetPort: 3000
